# Kokum

./: CMakeLists.txt
Kokum/: CMakeLists.txt
Kokum/ASM/avx/Vectors/: vec2d.asm  vec2f.asm  vec3d.asm  vec3f.asm  vec4d.asm  vec4f.asm
Kokum/ASM/sse/Vectors/: vec2d.asm  vec2f.asm  vec2i.asm  vec3d.asm  vec3f.asm  vec3i.asm  vec4d.asm  vec4f.asm  vec4i.asm
Kokum/include/kokum/: vec2.hpp  vec3.hpp  vec4.hpp
Kokum/src/: Kokum.cpp  Kokum.hpp
Kokum/wrapper/: mat2d.hpp  mat2f.hpp  mat2i.hpp  mat3d.hpp  mat3f.hpp  mat3i.hpp  mat4d.hpp  mat4f.hpp  mat4i.hpp  point2d.hpp  point2f.hpp  point2i.hpp  point3d.hpp  point3f.hpp  point3i.hpp  vec2d.hpp  vec2f.hpp  vec2i.hpp  vec3d.hpp  vec3f.hpp  vec3i.hpp  vec4d.hpp  vec4f.hpp  vec4i.hpp
Sandbox/: CMakeLists.txt  main.cpp
